# plexus

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  clippy.sh  rustdoc.sh  rustfmt.sh  rustfmt.toml
.github/workflows/: continuous-integration.yml
benches/: subdivide.rs
data/: cube.ply  plexus.ply  teapot.ply
doc/: katex-header.html
examples/: sphere.rs  subdivide.rs  teapot.rs  zip.rs
examples/sphere/: Cargo.toml
examples/sphere/src/: main.rs
examples/subdivide/: Cargo.toml
examples/subdivide/src/: main.rs
examples/teapot/: Cargo.toml
examples/teapot/src/: main.rs
examples/transcode/: Cargo.toml
examples/transcode/src/: main.rs
examples/viewer/: README.md  camera.rs  main.rs  pipeline.rs  renderer.rs  shader.v.glsl
pictor/: Cargo.toml
pictor/src/: camera.rs  harness.rs  lib.rs  pipeline.rs  renderer.rs  shader.glsl.frag  shader.glsl.vert  shader.spv.frag  shader.spv.vert
plexus/: Cargo.toml
plexus-viewer/: Cargo.toml
plexus-viewer/src/: lib.rs  pipeline.rs  renderer.rs  shader.f.glsl  shader.v.glsl
plexus/.cargo/: config
plexus/src/: buffer.rs  builder.rs  cgmath.rs  constant.rs  index.rs  lib.rs  mint.rs  nalgebra.rs  transact.rs
plexus/src/buffer/: builder.rs  mod.rs
plexus/src/encoding/: mod.rs  ply.rs
plexus/src/entity/: borrow.rs  dijkstra.rs  mod.rs  storage.rs  traverse.rs  view.rs
plexus/src/entity/storage/: hash.rs  journal.rs  mod.rs  rekey.rs  slot.rs
plexus/src/geometry/: cgmath.rs  mod.rs  nalgebra.rs  partition.rs  sweep.rs
plexus/src/graph/: builder.rs  core.rs  data.rs  edge.rs  entity.rs  face.rs  geometry.rs  key.rs  mod.rs  path.rs  storage.rs  trace.rs  vertex.rs
plexus/src/graph/mutation/: edge.rs  face.rs  mod.rs  path.rs  vertex.rs
plexus/src/graph/storage/: alias.rs  key.rs  mod.rs  payload.rs
plexus/src/graph/view/: edge.rs  face.rs  mod.rs  path.rs  traversal.rs  traverse.rs  vertex.rs
plexus/src/integration/: cgmath.rs  glam.rs  mint.rs  mod.rs  nalgebra.rs  ultraviolet.rs
plexus/src/network/: mod.rs  storage.rs  traverse.rs  view.rs
plexus/src/primitive/: cube.rs  decompose.rs  generate.rs  mod.rs  sphere.rs
src/: buffer.rs  index.rs  lib.rs  ordered.rs
src/buffer/: conjoint.rs  disjoint.rs  mod.rs
src/encoding/: ply.rs
src/generate/: cube.rs  decompose.rs  generate.rs  geometry.rs  index.rs  mod.rs  sphere.rs  topology.rs  unit.rs
src/geometry/: cgmath.rs  compose.rs  convert.rs  mint.rs  mod.rs  nalgebra.rs  ops.rs  query.rs  space.rs
src/graph/: borrow.rs  container.rs  core.rs  geometry.rs  mesh.rs  mod.rs  mutation.rs  payload.rs  storage.rs  topology.rs
src/graph/container/: core.rs  mod.rs
src/graph/geometry/: mod.rs
src/graph/mutation/: edge.rs  face.rs  mod.rs  region.rs  vertex.rs
src/graph/storage/: alias.rs  convert.rs  core.rs  key.rs  mod.rs  payload.rs
src/graph/topology/: edge.rs  face.rs  mod.rs  vertex.rs
src/graph/view/: convert.rs  edge.rs  face.rs  mod.rs  vertex.rs
src/primitive/: cube.rs  decompose.rs  generate.rs  index.rs  mod.rs  sphere.rs  topology.rs
