[package]
name = "plexus"
version = "0.0.10"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/olson-sean-k/plexus"
description = "2D and 3D mesh manipulation."
keywords = ["graphics", "half-edge", "mesh", "topology"]

[package.metadata.docs.rs]
# Enable all featues so that trait implementations for types from commonly used
# linear algebra crates are shown.
all-features = true
rustdoc-args = [
    # https://github.com/rust-lang/rust/issues/39437
    #
    #"--document-private-items"
]

[badges]
travis-ci = { repository = "olson-sean-k/plexus" }

[[example]]
name = "viewer"
path = "examples/viewer/main.rs"

[[example]]
name = "zip"
path = "examples/zip.rs"

[lib]
name = "plexus"

[features]
default = ["geometry-nalgebra"]
geometry-cgmath = ["cgmath"]
geometry-nalgebra = ["nalgebra"]

[dependencies]
arrayvec = "0.4.*"
decorum = "~0.1.1"
derivative = "1.0.*"
failure = "0.1.*"
fnv = "1.0.*"
fool = "0.0.1"
itertools = "0.6.*"
num = "0.2.*"
typenum = "1.10.*"

cgmath = { version = "0.16.*", optional = true }
nalgebra = { version = "0.16.*", optional = true }

[dev-dependencies]
gfx = "0.17.*"
gfx_device_gl = "0.15.*"
gfx_window_glutin = "0.26.*"
glutin = "0.18.*"
rand = "0.5.*"
