[package]
name = "pictor"
version = "0.0.0"
edition = "2018"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
description = "Support library for Plexus examples."
publish = false

[dependencies]
decorum = "^0.3.0"
gfx = "0.18.0"
gfx_device_gl = "0.16.0"
gfx_window_glutin = "0.31.0"
glutin = "0.21.2"
num = "^0.2.0"
rand = "^0.7.0"

[dependencies.plexus]
path = "../plexus"
default-features = false
features = [
    "geometry-nalgebra",
]
