[package]
name = "pictor"
version = "0.0.0"
edition = "2018"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
description = "Support library for Plexus examples."
publish = false

[dependencies]
bytemuck = "^1.4.0"
decorum = "^0.3.1"
lazy_static = "^1.4.0"
num = "^0.3.0"
rand = "^0.7.0"
winit = "^0.23.0"

[dependencies.futures]
version = "=0.3"
default-features = false
features = [
    "std",
    "executor",
]

[dependencies.plexus]
path = "../plexus"
default-features = false
features = [
    "geometry-nalgebra",
]

[dependencies.wgpu]
#version = "^0.6.0"
git = "https://github.com/gfx-rs/wgpu-rs.git"
rev = "e798278"
