[package]
name = "pictor"
version = "0.0.0"
edition = "2021"
rust-version = "1.81.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
description = "Renderer and support library for Plexus examples."
publish = false

[dependencies]
bytemuck = "^1.13.0"
decorum = "^0.4.0"
naga = "^23.0.0"
nalgebra = "^0.33.0"
num = "^0.4.3"
rand = "^0.8.5"
theon = "^0.1.0"
winit = "^0.30.8"

[dependencies.futures]
version = "^0.3.31"
default-features = false
features = [
    "std",
    "executor",
]

[dependencies.plexus]
path = "../plexus"
default-features = false
features = ["geometry-nalgebra"]

[dependencies.wgpu]
version = "^23.0.1"
features = ["spirv"]
