[package]
name = "plexus"
version = "0.0.11"
edition = "2018"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://plexus.rs"
repository = "https://github.com/olson-sean-k/plexus"
description = "Polygonal mesh processing."
keywords = [
    "polygon",
    "mesh",
    "topology",
    "geometry",
    "half-edge"
]
categories = [
    "algorithms",
    "data-structures",
    "graphics",
    "rendering::data-formats"
]

[package.metadata.docs.rs]
# Enable all featues so that trait implementations for types from commonly used
# linear algebra crates are shown.
all-features = true
# Enable KaTeX support.
rustdoc-args = [
    "--html-in-header",
    "../doc/katex-header.html"
]

[features]
default = []
encoding-ply = ["ply-rs"]
geometry-cgmath = ["theon/geometry-cgmath"]
geometry-mint = ["theon/geometry-mint"]
geometry-nalgebra = ["theon/geometry-nalgebra"]

[dependencies]
arrayvec = "^0.5.0"
decorum = "^0.3.1"
derivative = "^2.1.0"
fnv = "^1.0.6"
fool = "0.0.3" # Unstable.
itertools = "^0.9.0"
num = "^0.2.0"
slotmap = "^0.4.0"
smallvec = "^1.0.0"
thiserror = "^1.0.3"
typenum = "^1.10.0"

ply-rs = { version = "^0.1.2", optional = true }

[dependencies.theon] # Unstable.
git = "https://github.com/olson-sean-k/theon.git"
rev = "2b6d62477d084b349f302da53462667ebb7133a1"
default-features = false
features = ["lapack"]

[dev-dependencies]
# For brevity and simplicity, tests (and documentation comments) use a direct
# dependency on `nalgebra`. This approach requires that the version
# specification is compatible with `theon`. Other crates use re-exported types
# and do not take a direct dependency on `nalgebra`.
nalgebra = "^0.21.0"

[dev-dependencies.theon] # Unstable.
git = "https://github.com/olson-sean-k/theon.git"
rev = "2b6d62477d084b349f302da53462667ebb7133a1"
default-features = false
features = [
    "geometry-nalgebra",
    "lapack"
]
