[package]
name = "plexus"
version = "0.0.11"
edition = "2021"
rust-version = "1.56.0"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
readme = "../README.md"
homepage = "https://plexus.rs"
repository = "https://github.com/olson-sean-k/plexus"
description = "Polygonal mesh processing."
keywords = [
    "polygon",
    "mesh",
    "topology",
    "geometry",
    "half-edge"
]
categories = [
    "algorithms",
    "data-structures",
    "graphics",
    "rendering::data-formats"
]

[package.metadata.docs.rs]
# Enable integration featues so that trait implementations for types from
# commonly used linear algebra crates are shown.
all-features = true
# Enable KaTeX support.
rustdoc-args = [
    "--html-in-header",
    "../doc/katex-header.html"
]

[[bench]]
name = "subdivide"
harness = false
path = "../benches/subdivide.rs"

[features]
default = []
encoding-ply = ["ply-rs"]
geometry-cgmath = ["theon/geometry-cgmath"]
geometry-glam = ["theon/geometry-glam"]
geometry-mint = ["theon/geometry-mint"]
geometry-nalgebra = ["theon/geometry-nalgebra"]
geometry-ultraviolet = ["theon/geometry-ultraviolet"]
unstable = []

[dependencies]
approx = "^0.3.0"
ahash = "^0.6.0"
arrayvec = "^0.6.0"
decorum = "^0.3.1"
derivative = "^2.1.1"
itertools = "^0.10.4"
num = "^0.3.0"
smallvec = "^1.0.0"
thiserror = "^1.0.3"
typenum = "^1.10.0"

[dependencies.ply-rs]
version = "^0.1.2"
optional = true

# TODO: Re-enable the `lapack` feature. Some geometry features (the `FacePlane`
#       trait) use this feature, but have been temporarily removed. See
#       https://github.com/olson-sean-k/plexus/issues/58 and
#       https://github.com/rust-ndarray/ndarray-linalg/issues/229
[dependencies.theon] # Unstable.
git = "https://github.com/olson-sean-k/theon.git"
rev = "789eb62"
default-features = false

[build-dependencies]
rustversion = "^1.0.3"

[dev-dependencies]
criterion = "^0.3.0"
# For brevity and simplicity, tests (and documentation comments) use a direct
# dependency on `nalgebra`. This approach requires that the version
# specification is compatible with `theon`. Other crates use re-exported types
# and do not take a direct dependency on `nalgebra`.
nalgebra = "^0.22.0"

[dev-dependencies.theon] # Unstable.
git = "https://github.com/olson-sean-k/theon.git"
rev = "789eb62"
default-features = false
features = ["geometry-nalgebra"]
