[package]
name = "example-sphere"
version = "0.0.0"
edition = "2021"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
publish = false

[dependencies]

[dependencies.pictor]
path = "../../pictor"

[dependencies.plexus]
path = "../../plexus"
default-features = false
features = [
    "encoding-ply",
    "geometry-nalgebra",
]
