[package]
name = "example-subdivide"
version = "0.0.0"
edition = "2018"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
publish = false

[dependencies]
decorum = "^0.3.1"
smallvec = "^1.0.0"

[dependencies.plexus]
path = "../../plexus"
default-features = false
features = [
    "geometry-nalgebra"
]
