[package]
name = "example-teapot"
version = "0.0.0"
edition = "2021"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
publish = false

[dependencies]
nalgebra = "^0.33.0"
theon = "^0.1.0"

[dependencies.pictor]
path = "../../pictor"

[dependencies.plexus]
path = "../../plexus"
default-features = false
features = [
    "encoding-ply",
    "geometry-nalgebra",
]
