[package]
name = "example-transcode"
version = "0.0.0"
edition = "2018"
authors = ["Sean Olson <olson.sean.k@gmail.com>"]
license = "MIT"
publish = false

[dependencies]
tobj = "^2.0.4"

[dependencies.pictor]
path = "../../pictor"

[dependencies.plexus]
path = "../../plexus"
default-features = false
features = [
    "encoding-ply",
    "geometry-nalgebra"
]
